# rust_web

./: README.md
actix/: Cargo.toml
actix/webservice/: .env  Cargo.toml
actix/webservice/src/: handlers.rs  models.rs  state.rs
db/: .env  Cargo.toml  db.sql
db/src/: main.rs
rust_web/: Cargo.toml
rust_web/http/src/: httprequest.rs  httpresponse.rs  lib.rs
rust_web/httpserver/: Cargo.toml
rust_web/httpserver/public/: 404.html  health.html
rust_web/httpserver/src/: handler.rs  lib.rs  main.rs  router.rs  server.rs
rust_web/tcpclient/src/: main.rs
rust_web/tcpserver/src/: main.rs
teaching_sys/webservice/: .env  Cargo.toml
teaching_sys/webservice/src/: db_access.rs  handlers.rs  state.rs
