[package]
name = "webservice"
authors = ["Zepeng Zhang <peterwrighten@gmail.com>"]
version = "0.1.0"
edition = "2021"
default-run = "teacher-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-rt = "*"
serde = { version = "*", features = ["derive"] }
chrono = { version = "*", features = ["serde"] }
dotenv = "*"
openssl = { version = "*", features = ["vendored"] }
sqlx = { version = "*", default_features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }

[[bin]]
name = "server1"

[[bin]]
name = "teacher-service"

